--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/desiatcodaniel/Safety-Equipments#readme",
   "dependencies": {
     "bundler": "^0.8.0",
+    "eslint": "^7.22.0",
     "parcel": "^2.0.0-beta.2"
   },
   "browserslist": [
