--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
   "homepage": "https://github.com/desiatcodaniel/Safety-Equipments#readme",
   "dependencies": {
     "bundler": "^0.8.0",
-    "eslint": "^7.22.0",
     "parcel": "^2.0.0-beta.2"
   },
   "browserslist": [
@@ -27,5 +26,10 @@
     "last 3 opera versions",
     "last 3 ios_saf versions",
     "last 3 safari versions"
-  ]
+  ],
+  "devDependencies": {
+    "eslint": "^7.22.0",
+    "eslint-config-airbnb-base": "^14.2.1",
+    "eslint-plugin-import": "^2.22.1"
+  }
 }
